@@ -1,5 +1,13 @@
 2011-03-16  Nicola Pero  <nicola.pero@meta-innovation.com>
 
+	* GNUmakefile.in (rpm): Depend on svn-dist and updated
+	location of .tar.gz file to copy.
+	* gnustep-make.spec.in (CFLAGS): Added --with-layout=gnustep
+	to configure command.
+	(%files): Added /etc/GNUstep/GNUstep.conf.
+
+2011-03-16  Nicola Pero  <nicola.pero@meta-innovation.com>
+
 	* Documentation/gnustep-filesystem.texi: Updated documentation for
 	change in default filesystem layout and configuration file
 	location.
